# Cordyceps-Militaris

./: .gitignore  BotServer2.py  README.md  ascii_UI  compile  handler.py  http_bus.py  interpreter.py  journal  json_test.py  listener_http.py  listener_http.py.bak  listener_tcp.py  logger.py  maldev2.cpp  nix_sp0re  nix_sp0re.cpp  nxsp.cpp  rat  rat.cpp  resources.py  server.py  sp0re.cpp  token  v1_reverse_agency.go  win_sp0re.cpp  wsarev.cpp
darkside/: BotServer.py  maldev.cpp
listener_http/: requirements.txt
listner_http/: listener_http.py
log/: .history
modules/: bash_history_deletion.sh  modules.json  systemd_service.c
nix_http_sp0re/: CMakeLists.txt  CMakeSettings.json  implant.cpp  implant.h  main.cpp  results.h  tasks.cpp  tasks.h
testdir/: log.py
win_http_sp0re/: win_http_sp0re.vcxproj  win_http_sp0re.vcxproj.filters
win_http_sp0re/win_http_sp0re/: implant.cpp  implant.h  main.cpp  results.h  tasks.cpp  tasks.h  win_http_sp0re.vcxproj
win_http_sp0re/win_http_sp0re/Debug/: vc142.idb
